# Indiviual-project

./: README.md  test.txt  test_1.txt
Arduino_Uno_Unitree/: Arduino_Uno_Unitree.ino
IR_camera_tracking_code_with_Processing/: IR_camera_tracking_code_with_Processing.ino  Processing code.pde
Serial Communication with Arduino/: CMakeLists.txt  Instuctions.txt
Serial Communication with Arduino/examples/: example_joystick3.cpp
Serial Communication with Arduino/unitree_legged_sdk/: CMakeLists.txt
Serial Communication with Arduino/unitree_legged_sdk/examples/: example_joystick2.cpp
Slider Mechanism CAD model ready for 3D printing/: Thumb Pad.stl  extra.stl  handle cover.stl  handle top.stl  inner slider.stl  shaft tip.stl  shaft.stl  slider rail.stl
